# carta

./: .gitattributes  .gitignore  ADOPTING.md  ARCHITECTURE.md  CONTRIBUTING.md  FLOW.md  PATTERNS.md  README.md  pyproject.toml  requirements-mcp.txt  requirements.txt
.ccdd/: agent-a.yaml  agent-b.yaml
.github/workflows/: ci.yml
agents/: agent_a.py  agent_b.py  agent_rest.py  test_agent_a.py  test_agent_b.py  test_agent_rest.py  test_tool_selector.py  tool_selector.py
bash/: allowlist.py  executor.py  sandbox.py  test_bash.py
benchmarks/: README.md  bench_sha.py
carta/: README.md  __init__.py  __main__.py  agent.py  agent_yaml.py  client.py  complexity.py  config.py  flow.py  init.py  local.py  mailbox.py  mcp_executor.py  openapi_to_okf.py  postal_audit.py  router.py  scorers.py  selector.py  staleness.py  swarm.py  test_agent_yaml.py  test_bash.py  test_carta.py  test_cli.py  test_complexity.py  test_config.py  test_fixes.py  test_flow.py  test_init.py  test_local.py  test_mailbox.py  test_mcp_executor.py  test_openapi_to_okf.py  test_postal_audit.py  test_router.py  test_scorers.py  test_selector.py  test_sha.py  test_staleness.py  test_swarm.py  (+4 more)
carta/bash/: __init__.py  allowlist.py  audit.py  executor.py  filesystem.py
carta/eval/: n8n_labels.json  run_eval.py  test_eval.py
carta/okf/: send_to_agent.md
examples/: README.md  agent.yaml  fix-and-test.flow.yaml
okf/: index.md
okf/n8n/: index.md
postal/: __init__.py  crypto.py  identity.py  message.py  requirements.txt  storage.py  test_postal.py
tests/: test_dual_routes.py  test_integration.py
(+67 files in other folders)
