[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carta"
version = "0.1.0"
description = "Agent coordination protocol: OKF capability discovery, CCDD governance, Postal async messaging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
postal = ["cryptography>=42.0"]
mcp = ["mcp>=1.0"]
all = ["cryptography>=42.0", "mcp>=1.0"]

[project.scripts]
carta = "carta.__main__:main"

[project.urls]
Repository = "https://github.com/okf/carta"

[tool.setuptools.packages.find]
where = ["."]
include = ["carta*"]